--- a/src/views/events.hbs
+++ b/src/views/events.hbs
@@ -53,7 +53,7 @@
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
         <tr>
-            <th scope="col">Title</th>
+            <th scope="col">title</th>
             <th scope="col">Description</th>
             <th scope="col">Location</th>
             <th scope="col">Date</th>
